Add stub sanitizers and update MainActivity

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,49 @@
-org.gradle.jvmargs=-Xmx2g
+# ==========================
+# Gradle JVM & Memory Settings (Aggressive)
+# ==========================
+org.gradle.jvmargs=-Xmx8g -XX:+HeapDumpOnOutOfMemoryError -XX:+UseG1GC -Dfile.encoding=UTF-8
+
+# Enable parallel project execution (multi-module) for maximum speed
+org.gradle.parallel=true
+
+# Enable build caching for large files and intermediate outputs
+org.gradle.caching=true
+
+# Configure on-demand to only configure necessary projects
+org.gradle.configureondemand=true
+
+# Reduce Gradle daemon idle timeout to reclaim memory after heavy tasks
+# Value is in milliseconds
+org.gradle.daemon.idletimeout=10800000
+
+# Enable Gradle worker API for parallel tasks
+org.gradle.workers.max=8
+
+# Warning settings: show all deprecation warnings
+org.gradle.warning.mode=all
+
+# Enable profiling for performance debugging
+org.gradle.profile=true
+
+# ==========================
+# Android Specific
+# ==========================
 android.useAndroidX=true
 android.enableJetifier=true
+
+# Enable incremental dexing for faster APK builds
+# android.incrementalJavaCompile=true
+android.enableJetifierIncremental=true
+
+# ==========================
+# Kotlin Compiler Settings (Aggressive)
+# ==========================
+kotlin.incremental=true
+kotlin.compiler.execution.strategy=in-process
+kotlin.jvm.target=17
+
+# ==========================
+# Optional Logging/Debug
+# ==========================
+org.gradle.logging.level=quiet
+
